overflow issue fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@ header{
 body {
     background-color: whitesmoke;
     font-size: medium;
+    overflow: hidden;
 }
 
 .brand {
